# gaz_cart

./: .gitmodules  CLAUDE.md  CMakeLists.txt  TODO  cart.lua  config.json  config_defs.lua  definitions.lua  gui.lua  gui.qml  main.lua  nav.lua  nav_sim.lua  odo.lua  odometry.lua  ros_definitions.lua  test.lua
frames/: CMakeLists.txt  README.md  definitions.lua  frames.cpp  plugin.cpp  smoke.lua
mods/: config_defs.lua  diff_drive.lua  nav.lua  odometry.lua  rational.lua
nav/: CMakeLists.txt  CostmapView.qml  costmap_server.cpp  definitions.lua  global_planner.cpp  lidar.cpp  local_planner.cpp  nav.lua  nav_common.hpp  plugin.cpp  test_nav.lua  viz_test_tmp.lua
nav/rplidar_sdk/: CMakeLists.txt
nav/rplidar_sdk/sdk/include/: rplidar_driver.h  sl_lidar_driver.h
nav/rplidar_sdk/sdk/src/: sl_lidar_driver.cpp  sl_serial_channel.cpp  sl_tcp_channel.cpp  sl_udp_channel.cpp
nav/rplidar_sdk/sdk/src/arch/linux/: net_serial.cpp  net_socket.cpp
nav/rplidar_sdk/sdk/src/hal/: event.h
nodes/: definitions.lua  nav.lua  odo.lua  ros.lua  teleop.lua
qml/: Main.qml  NavView.qml  NavWindow.qml  TeleopView.qml  TeleopWindow.qml  WheelConfig.qml  WheelConfigWindow.qml
slam/: CMakeLists.txt  README.md  definitions.lua  map_workflow_smoke.lua  nav_smoke.lua  odometry_smoke.lua  plugin.cpp  reposition_smoke.lua  slam.cpp  variable_grid_smoke.lua
